# nrf52-ble-com

./: Cargo.toml  memory.x
src/: common.rs  main.rs
