[package]
name = "nrf52-ble-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "ble-l2cap",
    "ble-gatt-server",
    "ble-gatt-client",
    "ble-sec",
]

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-sec = ["nrf-softdevice/ble-sec"]

nrf52840 = [
  "embassy-nrf/nrf52840",
  "nrf-softdevice/nrf52840",
  "nrf-softdevice/s140",
  "dep:nrf-softdevice-s140"
]

[dependencies]
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "time"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features= ["print-defmt"] }
futures = { version = "0.3.29", default-features = false }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
nrf-softdevice = { version = "0.1.0", features = ["defmt", "ble-peripheral", "ble-central", "critical-section-impl", "nrf52840", "s140"] }
nrf-softdevice-s140 = { version = "0.1.1", optional = true }
fixed = "1.24.0"
heapless = "0.8.0"
atomic-pool = "1.0.1"
static_cell = "2.0.0"